<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/titre_pret"
            style="@style/Titre"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/Titre">

            <TextView
                style="@style/Editlabels"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="@dimen/marge_exterieure"
                android:layout_weight="40"
                android:layout_gravity="center"
                android:text="@string/titre_info_montant"
                />

            <EditText
                android:id="@+id/id_montant"
                android:layout_height="@dimen/hauteur_composant"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="60"
                android:hint="@string/hint_montant"
                android:inputType="numberDecimal"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/Titre">

            <TextView
                style="@style/Editlabels"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="@dimen/marge_exterieure"
                android:layout_weight="40"
                android:layout_gravity="center"
                android:text="@string/titre_info_interet"
                />

            <EditText
                android:id="@+id/id_tauxInteret"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="60"
                android:hint="@string/hint_interet"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/Titre">

            <TextView
                style="@style/Editlabels"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="@dimen/marge_exterieure"
                android:layout_weight="40"
                android:layout_gravity="center"
                android:text="@string/titre_info_duree"
                />

            <Spinner
                android:id="@+id/id_spinnerDuree"
                android:layout_gravity="center"
                android:layout_height="@dimen/hauteur_composant"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:entries="@array/tab_duree"
                android:spinnerMode="dropdown"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/Titre">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"

                android:layout_weight="50"
                android:layout_gravity="center"
                android:text="@string/txt_btn_calculer"
            />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_gravity="center"
                android:text="@string/txt_btn_effacer"
            />

        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/list_navigation"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFEEEEEE"
        android:choiceMode="singleChoice"
        android:entries="@array/tab_activites" />
</android.support.v4.widget.DrawerLayout>


