<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="37dp"
                android:id="@+id/Titre_pret"
                android:text="@string/titre_pret" />

            <TextView
                android:text="@string/titre_info_montant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Titre_pret"
                android:layout_toLeftOf="@+id/Titre_pret"
                android:layout_toStartOf="@+id/Titre_pret"
                android:layout_marginRight="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="30dp"
                android:id="@+id/titre_info_montant" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_alignTop="@+id/titre_info_montant"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/entrerMontant"
                android:hint="@string/hint_montant" />

            <TextView
                android:text="@string/titre_info_duree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/entrerTaux"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="22dp"
                android:id="@+id/titre_info_durePret" />

            <Button
                android:text="@string/txt_btn_calculer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titre_info_durePret"
                android:layout_toLeftOf="@+id/Titre_pret"
                android:layout_toStartOf="@+id/Titre_pret"
                android:layout_marginRight="19dp"
                android:layout_marginEnd="19dp"
                android:layout_marginTop="91dp"
                android:id="@+id/boutonCalculer" />

            <Button
                android:text="@string/txt_btn_effacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/boutonCalculer"
                android:layout_alignLeft="@+id/entrerTaux"
                android:layout_alignStart="@+id/entrerTaux"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:id="@+id/bouttonEffacer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/titre_info_durePret"
                android:layout_alignRight="@+id/bouttonEffacer"
                android:layout_alignEnd="@+id/bouttonEffacer"
                android:id="@+id/DurePret" />

            <TextView
                android:text="@string/titre_info_interet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titreInfoTaux"
                android:layout_above="@+id/titre_info_durePret"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/entrerTaux"
                android:inputType="numberDecimal"
                android:layout_below="@+id/entrerMontant"
                android:layout_alignLeft="@+id/entrerMontant"
                android:layout_alignStart="@+id/entrerMontant"
                android:hint="@string/hint_interet" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:id="@+id/spinner_dure"
                android:layout_alignTop="@+id/DurePret"
                android:layout_alignLeft="@+id/bouttonEffacer"
                android:layout_alignStart="@+id/bouttonEffacer"
                android:entries="@array/tab_duree" />

        </RelativeLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/list_navigation"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFEEEEEE"
        android:choiceMode="singleChoice"
        android:entries="@array/tab_activites" />
</android.support.v4.widget.DrawerLayout>