<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/titre_conifere"
            style="@style/Titre"/>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/sous_titre_conifere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:layout_margin="@dimen/marge_exterieure"
                android:gravity="left"
                style="@style/base_texte" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/prompt_choix_aiguilles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_margin="@dimen/marge_exterieure"
                style="@style/base_texte" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:choiceMode="singleChoice"
            android:entries="@array/tab_choix_aiguilles"
            android:id="@+id/listview_Choix" />

        <TextView
            android:id="@+id/item_conifere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            style="@style/base_texte"
            />


    </LinearLayout>

    <ListView
        android:id="@+id/list_navigation"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFEEEEEE"
        android:choiceMode="singleChoice"
        android:entries="@array/tab_activites" >


    </ListView>

</android.support.v4.widget.DrawerLayout>